[tool.poetry]
name = "println"
version = "0.1.0"
description = ""
authors = ["idlewith <newellzhou@163.com>"]
readme = "README.md"
packages = [{include = "println", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
println = "println.main:hello"
